SimGrid (3.11) NOT RELEASED; urgency=low

 TENTATIVE RELEASE GOALS for 3.11:
 * Consider the removal of Supernovae mode if no user has manifested since the
   release of version 3.10.
 * Switch to tesh.pl, and kill the now unused parts of xbt that seem fragile
 * Clean up CMake files (may need a full rewrite).
   Non exhaustive list of subgoals:
   - Use genuine cmake mechanisms and variables when available,
     instead of reinventing the wheel.
   - Correctly determine system and architecture (e.g. x32).
   - Correctly determine compiler type and version (e.g. clang).
   - Correctly set compiler flags according to compiler type and version.
   - Correctly set compiler flags for C++, Java, and Fortran compilers too.
   - Use git to generate the dist archive.  Either use git-archive to
     generate the tarball, or keep using cmake -E tar, but use git-ls-files
     to get the list of files to pack.
   - For Java, add an option to enable/disable the inclusion of the native
     libraries in the jar file, and avoid to duplicate these files.

 MSG:
 * [FIXME: elaborate] Merge branch hypervisor

 SURF:
 * [FIXME: elaborate] Rewrite Surf in C++

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.10) stable; urgency=low

 The Clean Diaper Release, a.k.a. SimGrid is leak-free.

 Java:
 * Reintegrate Java to the main archive as desynchronizing these
   package is not acceptable anymore (Java is now considered stable)
 * Add explicit synchronization facilities through semaphores
 * Bug fix: Task.setDataSize() only changed the C world, not the value
   cached in the Java world

 MSG:
 * Dramatically change the way files are handled. API and internals changed, but
   this part of MSG was not considered as production grade either.
 * Add explicit synchronization facilities through semaphores
 * Add a new function MSG_host_get_process_list()
 * Preliminary DVFS support (see examples/msg/energy/ for details)

 SMPI: