@@ -3,11 +3,8 @@
 ###############################
 # Declare the library content #
 ###############################
-# If we want supernovae, rewrite the libs' content to use it
-include(${CMAKE_HOME_DIRECTORY}/buildtools/Cmake/Supernovae.cmake)
 
 # Actually declare our libraries
-
 add_library(simgrid SHARED ${simgrid_sources})
 set_target_properties(simgrid PROPERTIES VERSION ${libsimgrid_version})
 
@@ -20,21 +17,6 @@ if(enable_java)
 endif()
 
 add_dependencies(simgrid maintainer_files)
-
-# if supernovaeing, we need some depends to make sure that the source gets generated
-if (enable_supernovae)
-  add_dependencies(simgrid ${CMAKE_CURRENT_BINARY_DIR}/src/supernovae_sg.c)
-  if(enable_lib_static)
-    add_dependencies(simgrid_static ${CMAKE_CURRENT_BINARY_DIR}/src/supernovae_sg.c)
-  endif()
-
-  if(enable_smpi)
-    add_dependencies(simgrid ${CMAKE_CURRENT_BINARY_DIR}/src/supernovae_smpi.c)
-    if(enable_lib_static)
-      add_dependencies(simgrid_static ${CMAKE_CURRENT_BINARY_DIR}/src/supernovae_smpi.c)
-    endif()
-  endif()
-endif()
 
 # Compute the dependencies of SimGrid
 #####################################
