@@ -117,7 +117,6 @@ message("        Compile Smpi f90 ....: ${SMPI_F90}")
 message("        Compile Static ......: ${enable_lib_static}")
 message("")
 message("        Maintainer mode .....: ${enable_maintainer_mode}")
-message("        Supernovae mode .....: ${enable_supernovae}")
 message("        Model checking ......: ${enable_model-checking}")
 message("        Tracing mode ........: ${enable_tracing}")
 message("        Jedule  mode ........: ${enable_jedule}")
